implement : react router

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -55,11 +55,11 @@ img {
 }
 
 .contact_item_delete {
-  background-color: orangered;
+  background-color: transparent;
   border: 0;
   border-radius: 4px;
   cursor: pointer;
-  color: white;
+  color: red;
   font-size: 18px;
   padding: 8px;
 }
@@ -91,4 +91,36 @@ img {
   color: #aaa;
   font-size: 28px;
   margin-top: 50px;
+}
+
+.search_bar {
+  display: block;
+  width: 100%;
+  margin: 16px 0;
+  padding: 12px;
+  background-color: transparent;
+  font-family: 'Inter', sans-serif;
+  border: 2px dashed black;
+  border-radius: 4px;
+}
+
+.contact_app_header {
+  display: flex;
+  padding: 32px 0;
+}
+
+.contact_app_header h1 {
+  font-weight: normal;
+  font-size: 32px;
+  flex: 1;
+}
+
+.navigation ul li {
+  display: inline-block;
+  padding: 6px 16px;
+}
+ 
+.navigation ul li a {
+  font-size: 22px;
+  color: black;
 }
